# matplotloom

./: .buildinfo  .gitignore  LICENSE  README.md  TODO.md  genindex.html  index.html  objects.inv  prototype.ipynb  pyproject.toml  search.html  searchindex.js
.github/workflows/: release.yml  sphinx.yml  testing.yml
docs/: conf.py  index.md  index.rst
examples/: bessel_wave.py  double_pendulum.py  lorenz.py  night_time_shading.py  parallel_sine_wave.py  rotating_circular_sine_wave.py  sine_wave.py
matplotloom/: __init__.py  loom.py
tests/: conftest.py  test_examples.py  test_loom.py
