[tool.poetry]
name = "matplotloom"
version = "0.7.1"
description = "Weave your frames into matplotlib animations."
authors = ["ali-ramadhan <ali.hh.ramadhan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.0.0"
ipython = "^8.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
sphinx = "^7.3.7"


[tool.poetry.group.examples.dependencies]
numpy = "^1.26.4"
joblib = "^1.4.2"
cmocean = "^4.0.3"
scipy = [
    {version = "^1.13.0", python = "~3.9"},
    {version = "^1.14.0", python = "^3.10"}
]
tqdm = "^4.66.4"
cartopy = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
