[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matplotloom"
version = "0.8.0"
description = "Weave your frames into matplotlib animations."
authors = [
    { name = "ali-ramadhan", email = "ali.hh.ramadhan@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "matplotlib>=3.10.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "sphinx>=8.1.3",
]
examples = [
    "cartopy>=0.24.1",
    "cmocean>=4.0.3",
    "joblib>=1.5.1",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
